# type_comparable

./: .coveragerc  .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  README.rst  TODO  setup.cfg  setup.py  tox.ini  versioning.py
tests/: test_type_comparable.py
type_comparable/: __init__.py  pytest_plugin.py
