[metadata]
name = type_comparable
version = 0.0.2
description = Helper for checking variable equivalence by type. Useful for tests
long_description = file: README.md
url = https://github.com/sirkonst/type_comparable
author = Konstantin Enchant
author_email = sirkonst@gmail.com
keywords = test, tests, pytest, type
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Framework :: Pytest

[options]
python_requires = >=3.4
packages = find: type_comparable
install_requires =
    wrapt

[options.extras_require]
develop =
    wheel
    twine
    pytest
    pytest-xdist
    pytest-cov

[options.entry_points]
pytest11 =
    type_comparable = type_comparable.pytest_plugin
