[metadata]
name = type_comparable
# version = < see setup.py >
description = Helper for checking variable equivalence by type. Useful for tests.
long_description = file: README.rst
url = https://github.com/sirkonst/type_comparable
author = Konstantin Enchant
author_email = sirkonst@gmail.com
maintainer = Konstantin Enchant
maintainer_email = sirkonst@gmail.com
keywords = test, tests, pytest, pytest-pluggin, type, typing
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Framework :: Pytest

[options]
python_requires = >=3.3
packages = find: type_comparable
install_requires =
    wrapt
    typing; python_version <= "3.5"

[options.extras_require]
develop =
    wheel
    twine
    docutils
    pytest
    pytest-xdist
    coverage
    tox

[options.entry_points]
pytest11 =
    type_comparable = type_comparable.pytest_plugin
