[metadata]
name = type_comparable
# version = < see setup.py >
description = Helper for checking variable equivalence by type. Useful for tests.
long_description = file: README.rst
url = https://github.com/sirkonst/type_comparable
author = Konstantin Enchant
author_email = sirkonst@gmail.com
maintainer = Konstantin Enchant
maintainer_email = sirkonst@gmail.com
keywords = test, tests, pytest, pytest-pluggin, type, typing
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Framework :: Pytest

[options]
python_requires = >=3.7
packages = find:
install_requires =
    wrapt~=1.15

[options.extras_require]
develop =
    coverage~=7.2
    docutils~=0.20
    pygments~=2.16
    pylama~=8.4
    pytest-xdist
    pytest~=7.2
    setuptools~=68.2; python_version>="3.12"  # needed for pylama
    tox~=4.8
    twine~=4.0
    wheel~=0.38

[options.entry_points]
pytest11 =
    type_comparable = type_comparable.pytest_plugin
